# A2O-Gateway

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  USER_MANUAL.md
config/: gateway.json  gateway.local.json  gateway.perf.json  gateway.test.json
examples/: anthropic-message.json  anthropic-stream.json  anthropic-tool.json  loadtest-payload.json  perf-payload.json
scripts/: gen-ca.sh
src/: admin_html_embedded.h  config.c  config.h  convert.c  convert.h  db.c  db.h  favicon_embedded.h  handlers.c  handlers.h  log.c  log.h  main.c  stats.c  stats.h  stream.c  stream.h  types.h  worker.c  worker.h
tests/: mock_server.c  test_cache_control.c  test_convert.c  test_log.c  test_stream.c  test_stubs.c
web/: admin.html
